syntax = "proto3";

package RepliqateCliPipe;

message ReqVersion {}
message RespVersion {
  string version = 1;
}

message ReqHealthCheck {}
message RespHealthCheck {}

message Envelope {
  oneof payload {
    ReqVersion reqVersion = 1;
    RespVersion respVersion = 2;
    
    ReqHealthCheck reqHealthCheck = 3;
    RespHealthCheck respHealthCheck = 4;
  }
}